data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_965.wast
;; 6. **Br after Call-Induced Stack Manipulation:**    Perform a `call` that manipulates the operand stack, followed by a `br` instruction. Assess whether the `br` can correctly manage the altered stack caused by the called function and branch appropriately.

(assert_invalid
  (module
    (func $manipulate_stack (param i32) (result i32)
      (i32.add (local.get 0) (i32.const 1))
    )
    (func (param i32) (result i32)
      (call $manipulate_stack (local.get 0))
      (block (result i32)
        (br 0)
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)